# FiReDR

./: .gitignore  README.md  pyproject.toml
prodr/: __init__.py  test.ipynb
prodr/apforest/: __init__.py  aptree.py  forest.py  tree.py
prodr/apforest/utils/: __init__.py  splitting.py  traverse_to_leaf.py
prodr/aptree/: Layering.md  __init__.py  tree.py
prodr/aptree/structures/: node.py
prodr/aptree/types/: __init__.py  hyperplane.py  vector.py
prodr/components/: flat_tree.py  micro_cluster.py  node.py
prodr/ensemble/: __init__.py  apforest.py  aptree.py  cluster_handler.py  cluster_tracker.py  ensemble.py  ensemble_.py  model.py  test.py
prodr/ensemble/components/: __init__.py  data.py  micro_cluster.py  node.py
prodr/ensemble/types/: __init__.py  events.py  update_log.py
prodr/ensemble/utils/: __init__.py  collision_matrix.py  split_micro_clusters.py
prodr/ensemble/utils/cluster/: __init__.py  cluster_generation.py  cluster_merging.py  cluster_operations.py  cluster_split.py  collision_matrix.py  cooccurrence_count.py
prodr/ensemble/utils/handlers/: __init__.py  insertion_handler.py
prodr/ensemble/utils/tree/: __init__.py  node_splitting.py  tree_traversal.py
prodr/ensemble/validators/: __init__.py  dim_check.py  dtype_check.py
prodr/types/: __init__.py  hyperplane.py  node.py
